force-app/main/default/objects/dupcheck__dcLayout__c/dupcheck__dcLayout__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Layout</label>
    <nameField>
        <displayFormat>DCLAY{000}</displayFormat>
        <label>Plauti Deduplicate Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Layouts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>