force-app/main/default/objects/dupcheck__dcLayout__c/fields/dupcheck__layout__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__layout__c</fullName>
    <label>layout</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>