force-app/main/default/objects/dupcheck__dcLayout__c/fields/dupcheck__prefix__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__prefix__c</fullName>
    <label>Object Prefix</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>