force-app/main/default/objects/dupcheck__dcLayout__c/fields/dupcheck__recordType__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__recordType__c</fullName>
    <label>Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>